@@ -5,7 +5,6 @@
  * terms of the Eclipse Public License v1.0 which accompanies this distribution,
  * and is available at http://www.eclipse.org/legal/epl-v10.html
  */
-
 package org.opendaylight.protocol.bgp.openconfig.routing.policy.impl;
 
 import static java.util.Objects.requireNonNull;
@@ -14,8 +13,6 @@ import static org.opendaylight.protocol.bgp.openconfig.routing.policy.spi.regist
 import com.google.common.cache.CacheBuilder;
 import com.google.common.cache.CacheLoader;
 import com.google.common.cache.LoadingCache;
-import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.concurrent.ExecutionException;
@@ -30,6 +27,7 @@ import org.opendaylight.protocol.bgp.rib.spi.policy.BGPRouteEntryExportParameter
 import org.opendaylight.protocol.bgp.rib.spi.policy.BGPRouteEntryImportParameters;
 import org.opendaylight.yang.gen.v1.http.openconfig.net.yang.bgp.types.rev151009.AfiSafiType;
 import org.opendaylight.yang.gen.v1.http.openconfig.net.yang.routing.policy.rev151009.DefaultPolicyType;
+import org.opendaylight.yang.gen.v1.http.openconfig.net.yang.routing.policy.rev151009.OpenconfigRoutingPolicyData;
 import org.opendaylight.yang.gen.v1.http.openconfig.net.yang.routing.policy.rev151009.apply.policy.group.apply.policy.Config;
 import org.opendaylight.yang.gen.v1.http.openconfig.net.yang.routing.policy.rev151009.routing.policy.top.RoutingPolicy;
 import org.opendaylight.yang.gen.v1.http.openconfig.net.yang.routing.policy.rev151009.routing.policy.top.routing.policy.PolicyDefinitions;
@@ -43,10 +41,10 @@ import org.opendaylight.yang.gen.v1.urn.opendaylight.params.xml.ns.yang.bgp.type
 import org.opendaylight.yangtools.yang.binding.InstanceIdentifier;
 
 final class BGPRibPolicyImpl implements BGPRibRoutingPolicy {
-    private static final InstanceIdentifier<RoutingPolicy> ROUTING_POLICY_IID
-            = InstanceIdentifier.create(RoutingPolicy.class);
-    private static final List<String> DEFAULT_IMPORT_POLICY = Collections.singletonList("default-odl-import-policy");
-    private static final List<String> DEFAULT_EXPORT_POLICY = Collections.singletonList("default-odl-export-policy");
+    private static final InstanceIdentifier<RoutingPolicy> ROUTING_POLICY_IID =
+        InstanceIdentifier.builderOfInherited(OpenconfigRoutingPolicyData.class, RoutingPolicy.class).build();
+    private static final List<String> DEFAULT_IMPORT_POLICY = List.of("default-odl-import-policy");
+    private static final List<String> DEFAULT_EXPORT_POLICY = List.of("default-odl-export-policy");
     private final DefaultPolicyType defaultExportPolicy;
     private final DefaultPolicyType defaultImportPolicy;
     private final List<String> exportPolicy;
@@ -79,22 +77,20 @@ final class BGPRibPolicyImpl implements BGPRibRoutingPolicy {
             ipolicy = DEFAULT_IMPORT_POLICY;
         }
 
-        this.defaultExportPolicy = requireNonNull(policyConfig.getDefaultExportPolicy());
-        this.defaultImportPolicy = requireNonNull(policyConfig.getDefaultImportPolicy());
-        this.exportPolicy = requireNonNull(epolicy);
-        this.importPolicy = requireNonNull(ipolicy);
-        this.ribBaseParameters = new PolicyRIBBaseParametersImpl(localAs, originatorId, clusterId);
+        defaultExportPolicy = requireNonNull(policyConfig.getDefaultExportPolicy());
+        defaultImportPolicy = requireNonNull(policyConfig.getDefaultImportPolicy());
+        exportPolicy = requireNonNull(epolicy);
+        importPolicy = requireNonNull(ipolicy);
+        ribBaseParameters = new PolicyRIBBaseParametersImpl(localAs, originatorId, clusterId);
     }
 
-    @SuppressFBWarnings(value = "UPM_UNCALLED_PRIVATE_METHOD",
-            justification = "https://github.com/spotbugs/spotbugs/issues/811")
     private List<Statement> loadStatements(final String key) throws ExecutionException, InterruptedException {
-        final ReadTransaction tr = this.databroker.newReadOnlyTransaction();
+        final ReadTransaction tr = databroker.newReadOnlyTransaction();
         final Optional<Statements> result =
                 tr.read(LogicalDatastoreType.CONFIGURATION, ROUTING_POLICY_IID.child(PolicyDefinitions.class)
                         .child(PolicyDefinition.class, new PolicyDefinitionKey(key)).child(Statements.class)).get();
         if (!result.isPresent()) {
-            return Collections.emptyList();
+            return List.of();
         }
         return result.get().getStatement();
     }
@@ -103,15 +99,15 @@ final class BGPRibPolicyImpl implements BGPRibRoutingPolicy {
     public Optional<Attributes> applyImportPolicies(final BGPRouteEntryImportParameters policyParameters,
             final Attributes attributes, final Class<? extends AfiSafiType> afiSafiType) {
         RouteAttributeContainer currentAttributes = routeAttributeContainerFalse(attributes);
-        for (final String policyName : this.importPolicy) {
-            for (final Statement statement : this.statements.getUnchecked(policyName)) {
-                currentAttributes = this.policyRegistry
-                        .applyImportStatement(this.ribBaseParameters, afiSafiType, policyParameters, currentAttributes,
+        for (final String policyName : importPolicy) {
+            for (final Statement statement : statements.getUnchecked(policyName)) {
+                currentAttributes = policyRegistry
+                        .applyImportStatement(ribBaseParameters, afiSafiType, policyParameters, currentAttributes,
                                 statement);
             }
         }
         if (!currentAttributes.anyConditionSatisfied()) {
-            if (DefaultPolicyType.REJECTROUTE.equals(this.defaultImportPolicy)) {
+            if (DefaultPolicyType.REJECTROUTE.equals(defaultImportPolicy)) {
                 return Optional.empty();
             }
         }
@@ -122,14 +118,14 @@ final class BGPRibPolicyImpl implements BGPRibRoutingPolicy {
     public Optional<Attributes> applyExportPolicies(final BGPRouteEntryExportParameters policyParameters,
             final Attributes attributes, final Class<? extends AfiSafiType> afiSafi) {
         RouteAttributeContainer currentAttributes = routeAttributeContainerFalse(attributes);
-        for (final String policyName : this.exportPolicy) {
-            for (final Statement statement : this.statements.getUnchecked(policyName)) {
-                currentAttributes = this.policyRegistry.applyExportStatement(
-                        this.ribBaseParameters, afiSafi, policyParameters, currentAttributes, statement);
+        for (final String policyName : exportPolicy) {
+            for (final Statement statement : statements.getUnchecked(policyName)) {
+                currentAttributes = policyRegistry.applyExportStatement(
+                        ribBaseParameters, afiSafi, policyParameters, currentAttributes, statement);
             }
         }
         if (!currentAttributes.anyConditionSatisfied()) {
-            if (DefaultPolicyType.REJECTROUTE.equals(this.defaultExportPolicy)) {
+            if (DefaultPolicyType.REJECTROUTE.equals(defaultExportPolicy)) {
                 return Optional.empty();
             }
         }
